plugins {
    id 'java'
    id 'application'
    id 'com.google.protobuf' version '0.9.4'
    id 'distribution'
}

group = 'com.protonova'
version = '1.0-SNAPSHOT'

// Java version compatibility
java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    // Library dependency
    implementation 'com.protonova:proto-nova-Library:1.0-SNAPSHOT'
    
    // Protobuf
    implementation 'com.google.protobuf:protobuf-java:3.25.3'
    
    // JSON and data
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.json:json:20240303'
    
    // Testing
    testImplementation 'junit:junit:4.13.2'
}

application {
    mainClass = 'main.Main'
}

// Create Fat JAR with all dependencies
jar {
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    manifest {
        attributes(
            'Implementation-Title': project.name,
            'Implementation-Version': project.version,
            'Implementation-Vendor': 'Proto Nova',
            'Created-By': System.getProperty('java.version'),
            'Main-Class': 'main.Main'
        )
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}